--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h1>Writer of the month</h1>
             <!-- card -->
             <div class="profile-card">
-              <div class="profile-pic"><img src="img/WhatsApp Image 2024-02-10 at 22.24.58_fd6d9820.jpg" alt="" /></div>
+              <div class="profile-pic"><img src="img/@zoeisabellakravitz on Instagram.jpeg" alt="" /></div>
               <div class="profile-name">
                 <h3>Andhyan Yogawardhana</h3>
                 <p>Computer Science Student</p>
@@ -178,7 +178,7 @@
             <!-- end card -->
             <!-- card -->
             <div class="profile-card">
-              <div class="profile-pic"><img src="img/WhatsApp Image 2024-02-10 at 22.24.58_fd6d9820.jpg" alt="" /></div>
+              <div class="profile-pic"><img src="img/selina kyle_ catwoman_.jpeg" alt="" /></div>
               <div class="profile-name">
                 <h3>Fidzal Adrian</h3>
                 <p>Network Specialist</p>
@@ -187,7 +187,7 @@
             <!-- end card -->
             <!-- card -->
             <div class="profile-card">
-              <div class="profile-pic"><img src="img/WhatsApp Image 2024-02-10 at 22.24.58_fd6d9820.jpg" alt="" /></div>
+              <div class="profile-pic"><img src="img/The Penguin.jpeg" alt="" /></div>
               <div class="profile-name">
                 <h3>Jovinca Claudia Amarissa</h3>
                 <p>Computer Science Student</p>
@@ -196,7 +196,7 @@
             <!-- end card -->
             <!-- card -->
             <div class="profile-card">
-              <div class="profile-pic"><img src="img/WhatsApp Image 2024-02-10 at 22.24.58_fd6d9820.jpg" alt="" /></div>
+              <div class="profile-pic"><img src="img/The riddler icons.jpeg" alt="" /></div>
               <div class="profile-name">
                 <h3>Santa Sisilia Filia Dulcis</h3>
                 <p>UI/UX lecturer</p>
@@ -205,7 +205,7 @@
             <!-- end card -->
             <!-- card -->
             <div class="profile-card">
-              <div class="profile-pic"><img src="img/WhatsApp Image 2024-02-10 at 22.24.58_fd6d9820.jpg" alt="" /></div>
+              <div class="profile-pic"><img src="img/✧.jpeg" alt="" /></div>
               <div class="profile-name">
                 <h3>Albert Cristanto Halim</h3>
                 <p>Fullstack Developer</p>
@@ -216,7 +216,7 @@
             <div class="btn-group" id="moreprofile">
               <!-- card -->
               <div class="profile-card">
-                <div class="profile-pic"><img src="img/WhatsApp Image 2024-02-10 at 22.24.58_fd6d9820.jpg" alt="" /></div>
+                <div class="profile-pic"><img src="img/selina kyle_ catwoman_.jpeg" alt="" /></div>
                 <div class="profile-name">
                   <h3>Radhyanas Oetomo</h3>
                   <p>Fullstack Developer</p>
@@ -225,7 +225,7 @@
               <!-- end card -->
               <!-- card -->
               <div class="profile-card">
-                <div class="profile-pic"><img src="img/WhatsApp Image 2024-02-10 at 22.24.58_fd6d9820.jpg" alt="" /></div>
+                <div class="profile-pic"><img src="img/The Penguin.jpeg" alt="" /></div>
                 <div class="profile-name">
                   <h3>David Lois</h3>
                   <p>Fullstack Developer</p>
