--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <!-- end card -->
             <!-- card -->
             <div class="profile-card">
-              <div class="profile-pic"><img src="img/selina kyle_ catwoman_.jpeg" alt="" /></div>
+              <div class="profile-pic"><img src="img/The riddler icons.jpeg" alt="" /></div>
               <div class="profile-name">
                 <h3>Fidzal Adrian</h3>
                 <p>Network Specialist</p>
@@ -216,7 +216,7 @@
             <div class="btn-group" id="moreprofile">
               <!-- card -->
               <div class="profile-card">
-                <div class="profile-pic"><img src="img/selina kyle_ catwoman_.jpeg" alt="" /></div>
+                <div class="profile-pic"><img src="img/@zoeisabellakravitz on Instagram.jpeg" alt="" /></div>
                 <div class="profile-name">
                   <h3>Radhyanas Oetomo</h3>
                   <p>Fullstack Developer</p>
@@ -371,7 +371,7 @@
               <div class="blog-info">
                 <div class="author">
                   <div class="author-pic">
-                    <img src="img/selina kyle_ catwoman_.jpeg" alt="cover img" />
+                    <img src="img/@zoeisabellakravitz on Instagram.jpeg" alt="cover img" />
                   </div>
                   <span>Vicky Vale</span>
                   <div class="blog-meta">
@@ -385,7 +385,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque est dicta quis! Modi, facilis neque!</p>
               </div>
               <div class="recipe-cover">
-                <img src="img/26 mapas locos de sitios de ficción que te encantaría poder visitar.jpeg" alt="cover img" />
+                <img src="img/Gotham City , James Lago.jpeg" alt="cover img" />
               </div>
             </div>
           </div>
