--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque est dicta quis! Modi, facilis neque!</p>
               </div>
               <div class="recipe-cover">
-                <img src="img/Gotham City , James Lago.jpeg" alt="cover img" />
+                <img src="img/@zoeisabellakravitz on Instagram.jpeg" alt="cover img" />
               </div>
             </div>
           </div>
@@ -385,7 +385,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque est dicta quis! Modi, facilis neque!</p>
               </div>
               <div class="recipe-cover">
-                <img src="img/Gotham City , James Lago.jpeg" alt="cover img" />
+                <img src="img/@zoeisabellakravitz on Instagram.jpeg" alt="cover img" />
               </div>
             </div>
           </div>
